--- a/angular asp.net core bootcamp/appsettings.Development.json
+++ b/angular asp.net core bootcamp/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
-  //"db_con": "Data Source=Akash\\SQLEXPRESS;Initial Catalog=angular_with_aspnet_core;Persist Security Info=True;User ID=sa;Password=heet3105;multipleactiveresultsets=true",
-  "db_con": "Data Source=PANTH-PC;Initial Catalog=angular_with_aspnet_core;Persist Security Info=True;User ID=sa;Password=akash2769;multipleactiveresultsets=true",
+  "db_con": "Data Source=Akash\\SQLEXPRESS;Initial Catalog=angular_with_aspnet_core;Persist Security Info=True;User ID=sa;Password=heet3105;multipleactiveresultsets=true",
+  //"db_con": "Data Source=PANTH-PC;Initial Catalog=angular_with_aspnet_core;Persist Security Info=True;User ID=sa;Password=akash2769;multipleactiveresultsets=true",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
